--- a/URCAndroid/res/layout/activity_setup.xml
+++ b/URCAndroid/res/layout/activity_setup.xml
@@ -49,6 +49,13 @@
         android:layout_below="@+id/setup_connect_device_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="22dp"/>
-    
+
+    <Button
+        android:id="@+id/button_drive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/setup_connect_state_label"
+        android:layout_centerHorizontal="true"
+        android:text="@string/drive" />
 
 </RelativeLayout>
